[gd_scene load_steps=2 format=3 uid="uid://n587cr1psc8b"]

[ext_resource type="Script" path="res://core/components/attack_component.gd" id="1_ohi7a"]

[node name="AttackComponent" type="Node"]
script = ExtResource("1_ohi7a")

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
